fixed image alignment

--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -50,12 +50,15 @@ $blue: #54B9D3;
     transform-style: preserve-3d;
     transition: transform .5s;
     background-repeat: no-repeat;
+    background-position: center;
     cursor: pointer;
 }
 
 .unrevealed {
     transform: rotateY(0deg);
     background-image: url("/images/chickAndHen.svg") !important;
+    box-shadow: 0px 2px 4px 0px gray;
+
 }
 
 .revealed, .matched {
